# spark-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/sogs/: main.cpp
examples/streaming-lod/: main.cpp
src/controls/: spark_controls.cpp  spark_controls.h
src/core/: defines.h  ext_splats.cpp  ext_splats.h  gsplat.cpp  gsplat.h  half_float.h  sh_clustering.cpp  sh_clustering.h  splat_encoding.h
src/formats/: decoder.cpp  decoder.h  ksplat_decoder.cpp  ksplat_decoder.h  ply_decoder.cpp  ply_decoder.h  rad_decoder.cpp  rad_decoder.h  sogs_decoder.cpp  sogs_decoder.h  splat_decoder.cpp  splat_decoder.h  spz_decoder.cpp  spz_decoder.h
src/lod/: lod_tree.cpp  lod_tree.h
src/raycast/: raycast.cpp  raycast.h
src/render/: packed_splats.cpp  packed_splats.h  readback.cpp  readback.h  spark_renderer.cpp  spark_renderer.h
src/scene/: spark_portals.cpp  spark_portals.h  splat_accumulator.cpp  splat_accumulator.h  splat_edit.cpp  splat_edit.h  splat_generator.cpp  splat_generator.h  splat_loader.cpp  splat_loader.h  splat_mesh.cpp  splat_mesh.h  splat_pager.cpp  splat_pager.h  splat_skinning.cpp  splat_skinning.h
src/shader/: dyno.cpp  dyno.h  shader_manager.cpp  shader_manager.h
src/shader/glsl/: splat_defines.glsl  splat_fragment.glsl  splat_vertex.glsl
src/sort/: radix_sort.cpp  radix_sort.h
src/viewer/: main.cpp
